--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "jest --detectOpenHandles"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.26.0",
     "cors": "^2.8.5",
+    "date-fns-tz": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.4.2",
