--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "yup": "^1.2.0"
   },
   "author": "",
   "license": "ISC",
@@ -24,8 +25,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
