--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@supabase/supabase-js": "^2.26.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "date-fns-tz": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
