--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PG_CONNECTION_STRING = "postgres://postgres:[YOUR PASSWORD]@db.kbonfsytczowulltrbho.supabase.co:6543/postgres"
 SALT="substituir pelo valor documentado no notion"
 SECRET_TOKEN="Substituir pelo valor documentado no notion"
+INVALID_TOKEN="Substituir pelo valor documentado no notion"
